--- a/payment_rave/views/payment_views.xml
+++ b/payment_rave/views/payment_views.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="acquirer_form_stripe" model="ir.ui.view">
-        <field name="name">payment.acquirer.form.inherit</field>
+    <record id="payment_acquirer_form" model="ir.ui.view">
+        <field name="name">Flutterwave for Business</field>
         <field name="model">payment.acquirer</field>
-        <field name="inherit_id" ref="payment.acquirer_form"/>
+        <field name="inherit_id" ref="payment.payment_acquirer_form"/>
         <field name="arch" type="xml">
-            <xpath expr='//group[@name="acquirer"]' position='after'>
+            <xpath expr='//group[@name="acquirer"]' position='inside'>
                 <group attrs="{'invisible': [('provider', '!=', 'rave')]}">
-                    <field name="rave_public_key"/>
-                    <field name="rave_secret_key"/>
+                    <field name="rave_public_key"  attrs="{'required':[('provider', '=', 'rave'), ('state', '!=', 'disabled')]}" password="False"/>
+                    <field name="rave_secret_key"  attrs="{'required':[('provider', '=', 'rave'), ('state', '!=', 'disabled')]}" password="True"/>
+                    <field name="rave_secret_hash" password="False"/>
                     <field name="environment"/>
                 </group>
             </xpath>
